# investi-graph

./: .gitignore  README.md  docker-compose.yml  ex_query_doc.md  example_answer.md  pyproject.toml  requirements.txt
alembic/: env.py
app/: __init__.py  config.py  crud.py  knowledge_graph.py  main.py  models.py  processing.py  schemas.py  sec_service.py
backend/: requirements.txt
backend/app/: knowledge_graph.py  processing.py  sec_service.py
backend/app/controllers/: document_controller.py
frontend/: .dockerignore  Dockerfile
